# safe-se-agent

./: .gitignore  .gitmodules  OEP.md  README.md  environment.yml  pyproject.toml
data/: gsm8k_eval_small.jsonl  gsm8k_train_small.jsonl  m1_eval.jsonl  m1_protocol_eval.jsonl  m1_protocol_train.jsonl  m1_train.jsonl  toolalpaca_eval_small.jsonl  toolalpaca_train_small.jsonl
data/gsm8k/: gsm8k_eval_1000.jsonl  gsm8k_eval_small.jsonl  gsm8k_train_1000.jsonl  gsm8k_train_small.jsonl
data/medqa/: medqa_eval_100.jsonl  medqa_eval_small.jsonl  medqa_train_100.jsonl  medqa_train_small.jsonl
data/oep/: oep_attack_cases.jsonl  oep_math_attack_cases.jsonl  oep_med_attack_cases.jsonl  oep_tool_attack_cases.jsonl
docs/: memory_integration_zh.md
safe_se_agent/: __init__.py
safe_se_agent/adapters/: __init__.py  base.py  placeholders.py  simple.py
safe_se_agent/core/: __init__.py  cli.py  defenses.py  experiment.py  io.py  langchain_memory.py  text.py  (+7 more)
scripts/: convert_math_rules_to_memory.py  filter_incorrect.py  inspect_memory.py  prepare_gsm8k.py  prepare_medqa.py  prepare_oep.py  prepare_toolalpaca.py  run_baseline_eval.py  run_m1_demo.py  run_memory_eval.py  run_oep_reflection.py  run_oep_repro.py  run_reflection.py
tests/: test_adapter_contract.py  test_experiment_runner.py  test_langchain_memory.py  test_memory.py  test_memos_memory.py  test_oep_repro.py  test_openai_compatible.py  test_prepare_gsm8k.py  test_prepare_medqa.py  test_prepare_oep.py  test_prepare_toolalpaca.py  test_promotion.py  test_resume.py  test_run_memory_eval.py  test_scoring.py  test_text.py
(+6 files in other folders)
