[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-se-agent"
version = "0.1.0"
description = "Research scaffold for safe self-evolving agents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
langchain = ["langchain-core>=0.3", "openai>=1.0.0"]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
